@@ -4,8 +4,8 @@
 # Contributor: Mathias Nedrebø <mathias <at> nedrebo.org>
 
 pkgname=alunn
-pkgver=0.7.13
-pkgrel=3
+pkgver=0.7.16
+pkgrel=1
 pkgdesc="System tray notification applet for Arch Linux updates and news"
 arch=('any')
 url="http://nedrebo.org/code/alunn"
@@ -18,7 +18,7 @@ optdepends=('notification-daemon: Desktop notification support'
             'konsole: for default KDE update command')
 source=(http://nedrebo.org/page/code/$pkgname/.files/$pkgname-$pkgver.tar.gz)
 
-md5sums=('45de5f6beca92738148c34ee1e682897')
+md5sums=('b5b454fe61b7176c543874652abd27a0')
 
 build() {
   cd ${srcdir}/$pkgname-$pkgver
