@@ -1,3 +1,7 @@
+2009-12-02  Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
+  * alunn-0.7.16-1:
+  New upstream release.
+
 2009-11-19  Jaroslav Lichtblau <dragonlord@aur.archlinux.org>
   * alunn-0.7.13-3:
   FS#17192 fixed
